--- a/package.json
+++ b/package.json
@@ -13,26 +13,39 @@
     },
     "author": "Elias Rahmani",
     "license": "MIT",
+    "moduleDirectories": [
+        "node_modules",
+        "src"
+    ],
     "dependencies": {
+        "@types/babel__core": "^7.1.12",
+        "@types/node-fetch": "^2.5.7",
         "@types/react": "^16.8.16",
         "@types/react-dom": "^16.8.4",
         "@types/react-redux": "^7.1.10",
         "babel-polyfill": "^6.26.0",
         "body-parser": "^1.19.0",
+        "core-js": "^3.8.2",
         "express": "^4.16.3",
+        "jest": "^26.6.3",
+        "moment": "^2.29.1",
         "mongoose": "^5.10.11",
+        "node-fetch": "^2.6.1",
         "react": "^16.5.2",
         "react-dom": "^16.5.2",
         "react-redux": "^7.2.2",
+        "regenerator-runtime": "^0.13.7",
         "ts-node": "^9.1.1"
     },
     "devDependencies": {
         "@babel/core": "^7.0.0",
         "@babel/plugin-proposal-class-properties": "^7.0.0",
+        "@babel/plugin-transform-runtime": "^7.12.10",
         "@babel/preset-env": "^7.0.0",
         "@babel/preset-react": "^7.0.0",
         "@tsconfig/node12": "^1.0.7",
         "@types/express": "^4.17.8",
+        "@types/jest": "^26.0.20",
         "@types/mongoose": "^5.7.37",
         "@types/node": "^14.11.8",
         "awesome-typescript-loader": "^5.2.1",
@@ -55,6 +68,7 @@
         "nodemon": "^1.17.3",
         "source-map-loader": "^0.2.4",
         "style-loader": "^0.23.0",
+        "ts-jest": "^26.4.4",
         "typescript": "^3.4.5",
         "url-loader": "^1.0.1",
         "webpack": "^4.5.0",
