--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
         "@types/react": "^16.8.16",
         "@types/react-dom": "^16.8.4",
         "@types/react-redux": "^7.1.10",
+        "@types/request": "^2.48.5",
         "babel-polyfill": "^6.26.0",
         "body-parser": "^1.19.0",
         "core-js": "^3.8.2",
+        "csvtojson": "^2.0.10",
         "express": "^4.16.3",
         "jest": "^26.6.3",
         "moment": "^2.29.1",
@@ -35,6 +37,7 @@
         "react-dom": "^16.5.2",
         "react-redux": "^7.2.2",
         "regenerator-runtime": "^0.13.7",
+        "request": "^2.88.2",
         "ts-node": "^9.1.1"
     },
     "devDependencies": {
