--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     ],
     "dependencies": {
         "@types/babel__core": "^7.1.12",
+        "@types/memory-cache": "^0.2.1",
         "@types/node-fetch": "^2.5.7",
         "@types/react": "^16.8.16",
         "@types/react-dom": "^16.8.4",
@@ -31,6 +32,7 @@
         "express": "^4.16.3",
         "i18n-iso-countries": "^6.4.0",
         "jest": "^26.6.3",
+        "memory-cache": "^0.2.0",
         "moment": "^2.29.1",
         "mongoose": "^5.10.11",
         "node-fetch": "^2.6.1",
