--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react-bootstrap": "^1.4.3",
         "react-card-flip": "^1.0.11",
         "react-dom": "^16.5.2",
+        "react-icons": "^4.1.0",
         "react-redux": "^7.2.2",
         "regenerator-runtime": "^0.13.7",
         "request": "^2.88.2",
