--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "react-redux": "^7.2.2",
         "regenerator-runtime": "^0.13.7",
         "request": "^2.88.2",
+        "rodal": "^1.8.1",
         "ts-node": "^9.1.1"
     },
     "devDependencies": {
@@ -79,6 +80,7 @@
         "style-loader": "^0.23.0",
         "ts-jest": "^26.4.4",
         "typescript": "^3.4.5",
+        "uglifyjs-webpack-plugin": "^2.2.0",
         "url-loader": "^1.0.1",
         "webpack": "^4.5.0",
         "webpack-cli": "^3.0.8",
