--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "react-dom": "^16.5.2",
         "react-icons": "^4.1.0",
         "react-redux": "^7.2.2",
+        "recharts": "^2.0.2",
         "regenerator-runtime": "^0.13.7",
         "request": "^2.88.2",
         "rodal": "^1.8.1",
