--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
   ],
   "include": [
     "./src/client/*",
-    "./src/client/types/**/*.d.ts"
+    "./src/client/types/**/*.d.ts",
+    "./types/*.d.ts"
   ]
 }
