--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "body-parser": "^1.19.0",
         "core-js": "^3.8.2",
         "csvtojson": "^2.0.10",
+        "eventemitter3": "^4.0.7",
         "express": "^4.16.3",
         "i18n-iso-countries": "^6.4.0",
         "jest": "^26.6.3",
