--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "module": "commonjs",
     "sourceMap": true,
     "outDir": "./dist/",
+    "resolveJsonModule": true,
     "lib": [
       "ES2017",
       "DOM"
