--- a/package.json
+++ b/package.json
@@ -1,91 +1,102 @@
 {
-    "name": "express-react-typescript",
-    "version": "3.0.1",
+    "name": "covid-dashboard",
+    "version": "0.0.1",
     "description": "An Express, React with Typescript and Less boilerplate",
     "main": "server/index.js",
+    "engines": {
+        "node": ">=6"
+    },
     "scripts": {
         "build": "webpack --mode production",
         "start": "npm run build && npm run server",
         "client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
-        "server": "tsc -p tsconfig.server.json && ts-node server/",
+        "dev-server": "tsc -p tsconfig.server.json && ts-node dist/",
+        "server": "ts-node /",
         "dev": "concurrently \"nodemon\" \"npm run client\" -n browser,server -c \"bgBlue.bold,bgMagenta.bold\"",
         "server-dev": "nodemon"
     },
-    "author": "Elias Rahmani",
+    "author": "Brandon Hafenrichter",
     "license": "MIT",
     "moduleDirectories": [
         "node_modules",
         "src"
     ],
     "dependencies": {
-        "@types/babel__core": "^7.1.12",
-        "@types/memory-cache": "^0.2.1",
-        "@types/node-fetch": "^2.5.7",
-        "@types/react": "^16.8.16",
-        "@types/react-dom": "^16.8.4",
-        "@types/react-redux": "^7.1.10",
-        "@types/request": "^2.48.5",
-        "babel-polyfill": "^6.26.0",
-        "body-parser": "^1.19.0",
-        "core-js": "^3.8.2",
-        "csvtojson": "^2.0.10",
-        "eventemitter3": "^4.0.7",
-        "express": "^4.16.3",
-        "i18n-iso-countries": "^6.4.0",
-        "jest": "^26.6.3",
-        "memory-cache": "^0.2.0",
-        "moment": "^2.29.1",
-        "mongoose": "^5.10.11",
-        "node-fetch": "^2.6.1",
-        "react": "^16.5.2",
-        "react-bootstrap": "^1.4.3",
-        "react-card-flip": "^1.0.11",
-        "react-dom": "^16.5.2",
-        "react-icons": "^4.1.0",
-        "react-redux": "^7.2.2",
-        "recharts": "^2.0.2",
-        "regenerator-runtime": "^0.13.7",
-        "request": "^2.88.2",
-        "rodal": "^1.8.1",
-        "ts-node": "^9.1.1"
-    },
-    "devDependencies": {
         "@babel/core": "^7.0.0",
         "@babel/plugin-proposal-class-properties": "^7.0.0",
         "@babel/plugin-transform-runtime": "^7.12.10",
         "@babel/preset-env": "^7.0.0",
         "@babel/preset-react": "^7.0.0",
         "@tsconfig/node12": "^1.0.7",
+        "@types/babel__core": "^7.1.12",
+        "@types/compression": "^1.7.0",
         "@types/express": "^4.17.8",
         "@types/jest": "^26.0.20",
+        "@types/memory-cache": "^0.2.1",
         "@types/mongoose": "^5.7.37",
         "@types/node": "^14.11.8",
+        "@types/node-fetch": "^2.5.7",
+        "@types/react": "^16.8.16",
+        "@types/react-dom": "^16.8.4",
+        "@types/react-ga": "^2.3.0",
+        "@types/react-redux": "^7.1.10",
+        "@types/request": "^2.48.5",
         "awesome-typescript-loader": "^5.2.1",
         "babel-eslint": "^10.0.0",
         "babel-loader": "^8.0.0",
+        "babel-polyfill": "^6.26.0",
+        "body-parser": "^1.19.0",
         "clean-webpack-plugin": "^1.0.0",
+        "compression": "^1.7.4",
         "concurrently": "^4.0.0",
         "copy-webpack-plugin": "^5.0.3",
+        "core-js": "^3.8.2",
         "css-loader": "^2.0.0",
+        "csvtojson": "^2.0.10",
         "eslint": "^5.0.0",
         "eslint-config-airbnb": "^17.0.0",
         "eslint-plugin-import": "^2.11.0",
         "eslint-plugin-jsx-a11y": "^6.0.3",
         "eslint-plugin-react": "^7.7.0",
+        "eventemitter3": "^4.0.7",
+        "express": "^4.16.3",
         "file-loader": "^3.0.0",
         "html-webpack-plugin": "^3.2.0",
+        "i18n-iso-countries": "^6.4.0",
+        "jest": "^26.6.3",
         "less": "^3.9.0",
         "less-loader": "^5.0.0",
+        "memory-cache": "^0.2.0",
         "mini-css-extract-plugin": "^0.6.0",
+        "moment": "^2.29.1",
+        "mongoose": "^5.10.11",
+        "node": "^15.4.0",
+        "node-fetch": "^2.6.1",
         "nodemon": "^1.17.3",
+        "react": "^16.5.2",
+        "react-bootstrap": "^1.4.3",
+        "react-card-flip": "^1.0.11",
+        "react-dom": "^16.5.2",
+        "react-ga": "^3.3.0",
+        "react-icons": "^4.1.0",
+        "react-lazyload": "^3.1.0",
+        "react-redux": "^7.2.2",
+        "recharts": "^2.0.2",
+        "regenerator-runtime": "^0.13.7",
+        "request": "^2.88.2",
+        "rodal": "^1.8.1",
         "source-map-loader": "^0.2.4",
         "style-loader": "^0.23.0",
         "ts-jest": "^26.4.4",
+        "ts-node": "^9.1.1",
         "typescript": "^3.4.5",
         "uglifyjs-webpack-plugin": "^2.2.0",
         "url-loader": "^1.0.1",
         "webpack": "^4.5.0",
         "webpack-cli": "^3.0.8",
         "webpack-dev-server": "^3.1.3"
+    },
+    "devDependencies": {
+        "@types/react-lazyload": "^3.0.0"
     }
 }
