--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -10,7 +10,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true,
-    "outDir": "./server",
+    "outDir": "./dist",
     "moduleResolution": "node",
     "sourceMap": true
   },
