--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "body-parser": "^1.19.0",
         "clean-webpack-plugin": "^1.0.0",
         "compression": "^1.7.4",
+        "compression-webpack-plugin": "^6.0.5",
         "concurrently": "^4.0.0",
         "copy-webpack-plugin": "^5.0.3",
         "core-js": "^3.8.2",
