--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "engines": {
         "node": ">=6"
     },
+    "proxy": "http://localhost:3001",
     "scripts": {
-        "build": "webpack --mode production",
-        "start": "npm run build && npm run server",
+        "copy-dependencies": "copyfiles -a src/server/data/**/* dist/data -u 3 && copyfiles -a src/server/data/* dist/data -u 3 && copyfiles -a src/server/static/**/* dist/static -u 3",
+        "build": "webpack --mode production && yarn run copy-dependencies",
+        "start": "npm run build && tsc -p tsconfig.server.json && npm run server",
         "client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
-        "dev-server": "tsc -p tsconfig.server.json && ts-node dist/",
-        "server": "ts-node /",
-        "dev": "concurrently \"nodemon\" \"npm run client\" -n browser,server -c \"bgBlue.bold,bgMagenta.bold\"",
-        "server-dev": "nodemon"
+        "dev-server": "tsc -p tsconfig.server.json && yarn run copy-dependencies && ts-node dist/",
+        "server": "ts-node dist/",
+        "dev": "concurrently \"nodemon\" \"npm run client\" -n browser,server -c \"bgBlue.bold,bgMagenta.bold\""
     },
     "author": "Brandon Hafenrichter",
     "license": "MIT",
@@ -51,6 +52,7 @@
         "compression-webpack-plugin": "^6.0.5",
         "concurrently": "^4.0.0",
         "copy-webpack-plugin": "^5.0.3",
+        "copyfiles": "^2.4.1",
         "core-js": "^3.8.2",
         "css-loader": "^2.0.0",
         "csvtojson": "^2.0.10",
