--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
         "react": "^16.5.2",
         "react-bootstrap": "^1.4.3",
         "react-card-flip": "^1.0.11",
+        "react-cookie": "^4.0.3",
         "react-dom": "^16.5.2",
         "react-ga": "^3.3.0",
         "react-icons": "^4.1.0",
