--- a/package.json
+++ b/package.json
@@ -29,20 +29,6 @@
         "@babel/plugin-transform-runtime": "^7.12.10",
         "@babel/preset-env": "^7.0.0",
         "@babel/preset-react": "^7.0.0",
-        "@tsconfig/node12": "^1.0.7",
-        "@types/babel__core": "^7.1.12",
-        "@types/compression": "^1.7.0",
-        "@types/express": "^4.17.8",
-        "@types/jest": "^26.0.20",
-        "@types/memory-cache": "^0.2.1",
-        "@types/mongoose": "^5.7.37",
-        "@types/node": "^14.11.8",
-        "@types/node-fetch": "^2.5.7",
-        "@types/react": "^16.8.16",
-        "@types/react-dom": "^16.8.4",
-        "@types/react-ga": "^2.3.0",
-        "@types/react-redux": "^7.1.10",
-        "@types/request": "^2.48.5",
         "awesome-typescript-loader": "^5.2.1",
         "babel-eslint": "^10.0.0",
         "babel-loader": "^8.0.0",
@@ -57,17 +43,11 @@
         "core-js": "^3.8.2",
         "css-loader": "^2.0.0",
         "csvtojson": "^2.0.10",
-        "eslint": "^5.0.0",
-        "eslint-config-airbnb": "^17.0.0",
-        "eslint-plugin-import": "^2.11.0",
-        "eslint-plugin-jsx-a11y": "^6.0.3",
-        "eslint-plugin-react": "^7.7.0",
         "eventemitter3": "^4.0.7",
         "express": "^4.16.3",
         "file-loader": "^3.0.0",
         "html-webpack-plugin": "^3.2.0",
         "i18n-iso-countries": "^6.4.0",
-        "jest": "^26.6.3",
         "less": "^3.9.0",
         "less-loader": "^5.0.0",
         "memory-cache": "^0.2.0",
@@ -85,7 +65,6 @@
         "react-ga": "^3.3.0",
         "react-icons": "^4.1.0",
         "react-lazyload": "^3.1.0",
-        "react-redux": "^7.2.2",
         "recharts": "^2.0.2",
         "regenerator-runtime": "^0.13.7",
         "request": "^2.88.2",
@@ -103,6 +82,25 @@
         "webpack-dev-server": "^3.1.3"
     },
     "devDependencies": {
-        "@types/react-lazyload": "^3.0.0"
+        "@types/react-lazyload": "^3.0.0",
+        "@types/babel__core": "^7.1.12",
+        "@types/compression": "^1.7.0",
+        "@types/express": "^4.17.8",
+        "@types/jest": "^26.0.20",
+        "@types/memory-cache": "^0.2.1",
+        "@types/mongoose": "^5.7.37",
+        "@types/node": "^14.11.8",
+        "@types/node-fetch": "^2.5.7",
+        "@types/react": "^16.8.16",
+        "@types/react-dom": "^16.8.4",
+        "@types/react-ga": "^2.3.0",
+        "@types/request": "^2.48.5",
+        "@tsconfig/node12": "^1.0.7",
+        "eslint": "^5.0.0",
+        "eslint-config-airbnb": "^17.0.0",
+        "eslint-plugin-import": "^2.11.0",
+        "eslint-plugin-jsx-a11y": "^6.0.3",
+        "eslint-plugin-react": "^7.7.0",
+        "jest": "^26.6.3"
     }
 }
