--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@babel/plugin-transform-runtime": "^7.12.10",
         "@babel/preset-env": "^7.0.0",
         "@babel/preset-react": "^7.0.0",
+        "@types/node-schedule": "^1.3.1",
         "awesome-typescript-loader": "^5.2.1",
         "babel-eslint": "^10.0.0",
         "babel-loader": "^8.0.0",
@@ -56,6 +57,7 @@
         "mongoose": "^5.10.11",
         "node": "^15.4.0",
         "node-fetch": "^2.6.1",
+        "node-schedule": "^1.3.2",
         "nodemon": "^1.17.3",
         "react": "^16.5.2",
         "react-bootstrap": "^1.4.3",
@@ -82,7 +84,7 @@
         "webpack-dev-server": "^3.1.3"
     },
     "devDependencies": {
-        "@types/react-lazyload": "^3.0.0",
+        "@tsconfig/node12": "^1.0.7",
         "@types/babel__core": "^7.1.12",
         "@types/compression": "^1.7.0",
         "@types/express": "^4.17.8",
@@ -94,8 +96,8 @@
         "@types/react": "^16.8.16",
         "@types/react-dom": "^16.8.4",
         "@types/react-ga": "^2.3.0",
+        "@types/react-lazyload": "^3.0.0",
         "@types/request": "^2.48.5",
-        "@tsconfig/node12": "^1.0.7",
         "eslint": "^5.0.0",
         "eslint-config-airbnb": "^17.0.0",
         "eslint-plugin-import": "^2.11.0",
