--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "proxy": "http://localhost:3001",
     "scripts": {
         "copy-dependencies": "copyfiles -a src/server/data/**/* dist/data -u 3 && copyfiles -a src/server/data/* dist/data -u 3 && copyfiles -a src/server/static/**/* dist/static -u 3",
-        "build": "webpack --mode production --config webpack.dev.js && yarn run copy-dependencies",
+        "build": "webpack --mode production --config webpack.prd.js && tsc -p tsconfig.server.json && yarn run copy-dependencies",
         "start": "npm run build && tsc -p tsconfig.server.json && npm run server",
         "client": "webpack-dev-server --mode development --devtool inline-source-map --hot --config webpack.dev.js",
         "dev-server": "tsc -p tsconfig.server.json && yarn run copy-dependencies && ts-node dist/",
         "server": "ts-node dist/",
-        "dev": "concurrently \"nodemon\" \"npm run client\" -n browser,server -c \"bgBlue.bold,bgMagenta.bold\"",
-        "deploy": "webpack --mode production --config webpack.prd.js && tsc -p tsconfig.server.json && yarn run copy-dependencies"
+        "dev": "concurrently \"nodemon\" \"npm run client\" -n browser,server -c \"bgBlue.bold,bgMagenta.bold\""
     },
     "author": "Brandon Hafenrichter",
     "license": "MIT",
@@ -35,7 +34,7 @@
         "babel-loader": "^8.0.0",
         "babel-polyfill": "^6.26.0",
         "body-parser": "^1.19.0",
-        "clean-webpack-plugin": "^1.0.0",
+        "clean-webpack-plugin": "^3.0.0",
         "compression": "^1.7.4",
         "compression-webpack-plugin": "^6.0.5",
         "concurrently": "^4.0.0",
@@ -79,7 +78,7 @@
         "typescript": "^3.4.5",
         "uglifyjs-webpack-plugin": "^2.2.0",
         "url-loader": "^1.0.1",
-        "webpack": "^4.5.0",
+        "webpack": "^4.34.0",
         "webpack-cli": "^3.0.8",
         "webpack-dev-server": "^3.1.3"
     },
