--- a/package.json
+++ b/package.json
@@ -45,34 +45,34 @@
         "recharts": "^2.0.2",
         "request": "^2.88.2",
         "rodal": "^1.8.1",
-        "typescript": "^3.4.5"
-    },
-    "devDependencies": {
+        "typescript": "^3.4.5",
         "url-loader": "^1.0.1",
         "webpack": "^4.34.0",
         "webpack-cli": "^3.0.8",
         "webpack-dev-server": "^3.1.3",
         "uglifyjs-webpack-plugin": "^2.2.0",
-        "source-map-loader": "^0.2.4",
         "style-loader": "^0.23.0",
         "svg-url-loader": "^7.1.1",
+        "file-loader": "^3.0.0",
+        "html-webpack-plugin": "^3.2.0",
+        "clean-webpack-plugin": "^3.0.0",
+        "compression": "^1.7.4",
+        "compression-webpack-plugin": "^6.0.5",
+        "copy-webpack-plugin": "^5.0.3",
+        "awesome-typescript-loader": "^5.2.1",
+        "mini-css-extract-plugin": "^0.6.0",
+        "source-map-loader": "^0.2.4"
+    },
+    "devDependencies": {
         "ts-jest": "^26.4.4",
         "ts-node": "^9.1.1",
         "regenerator-runtime": "^0.13.7",
         "nodemon": "^1.17.3",
-        "mini-css-extract-plugin": "^0.6.0",
-        "file-loader": "^3.0.0",
-        "html-webpack-plugin": "^3.2.0",
         "core-js": "^3.8.2",
         "css-loader": "^2.0.0",
         "csvtojson": "^2.0.10",
-        "clean-webpack-plugin": "^3.0.0",
-        "compression": "^1.7.4",
-        "compression-webpack-plugin": "^6.0.5",
         "concurrently": "^4.0.0",
-        "copy-webpack-plugin": "^5.0.3",
         "copyfiles": "^2.4.1",
-        "awesome-typescript-loader": "^5.2.1",
         "babel-eslint": "^10.0.0",
         "babel-loader": "^8.0.0",
         "babel-polyfill": "^6.26.0",
