--- a/.github/workflows/master_simplecovid.yml
+++ b/.github/workflows/master_simplecovid.yml
@@ -20,8 +20,9 @@ jobs:
         with:
           node-version: '12.x'
 
-      - name: npm build, and test
+      - name: npm install, build, and test
         run: |
+          npm install
           npm run build --if-present
           npm run test --if-present
 
