--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "express": "^4.16.3",
         "i18n-iso-countries": "^6.4.0",
         "memory-cache": "^0.2.0",
+        "millify": "^3.5.0",
         "moment": "^2.29.1",
         "node": "^15.4.0",
         "node-fetch": "^2.6.1",
@@ -46,42 +47,11 @@
         "typescript": "^3.4.5"
     },
     "devDependencies": {
-        "less": "^3.9.0",
-        "less-loader": "^5.0.0",
-        "url-loader": "^1.0.1",
-        "webpack": "^4.34.0",
-        "webpack-cli": "^3.0.8",
-        "webpack-dev-server": "^3.1.3",
-        "uglifyjs-webpack-plugin": "^2.2.0",
-        "source-map-loader": "^0.2.4",
-        "style-loader": "^0.23.0",
-        "svg-url-loader": "^7.1.1",
-        "ts-jest": "^26.4.4",
-        "ts-node": "^9.1.1",
-        "regenerator-runtime": "^0.13.7",
-        "nodemon": "^1.17.3",
-        "mini-css-extract-plugin": "^0.6.0",
-        "file-loader": "^3.0.0",
-        "html-webpack-plugin": "^3.2.0",
-        "core-js": "^3.8.2",
-        "css-loader": "^2.0.0",
-        "csvtojson": "^2.0.10",
-        "clean-webpack-plugin": "^3.0.0",
-        "compression": "^1.7.4",
-        "compression-webpack-plugin": "^6.0.5",
-        "concurrently": "^4.0.0",
-        "copy-webpack-plugin": "^5.0.3",
-        "copyfiles": "^2.4.1",
-        "awesome-typescript-loader": "^5.2.1",
-        "babel-eslint": "^10.0.0",
-        "babel-loader": "^8.0.0",
-        "babel-polyfill": "^6.26.0",
         "@babel/core": "^7.0.0",
         "@babel/plugin-proposal-class-properties": "^7.0.0",
         "@babel/plugin-transform-runtime": "^7.12.10",
         "@babel/preset-env": "^7.0.0",
         "@babel/preset-react": "^7.0.0",
-        "@types/node-schedule": "^1.3.1",
         "@tsconfig/node12": "^1.0.7",
         "@types/babel__core": "^7.1.12",
         "@types/compression": "^1.7.0",
@@ -91,16 +61,47 @@
         "@types/mongoose": "^5.7.37",
         "@types/node": "^14.11.8",
         "@types/node-fetch": "^2.5.7",
+        "@types/node-schedule": "^1.3.1",
         "@types/react": "^16.8.16",
         "@types/react-dom": "^16.8.4",
         "@types/react-ga": "^2.3.0",
         "@types/react-lazyload": "^3.0.0",
         "@types/request": "^2.48.5",
+        "awesome-typescript-loader": "^5.2.1",
+        "babel-eslint": "^10.0.0",
+        "babel-loader": "^8.0.0",
+        "babel-polyfill": "^6.26.0",
+        "clean-webpack-plugin": "^3.0.0",
+        "compression": "^1.7.4",
+        "compression-webpack-plugin": "^6.0.5",
+        "concurrently": "^4.0.0",
+        "copy-webpack-plugin": "^5.0.3",
+        "copyfiles": "^2.4.1",
+        "core-js": "^3.8.2",
+        "css-loader": "^2.0.0",
+        "csvtojson": "^2.0.10",
         "eslint": "^5.0.0",
         "eslint-config-airbnb": "^17.0.0",
         "eslint-plugin-import": "^2.11.0",
         "eslint-plugin-jsx-a11y": "^6.0.3",
         "eslint-plugin-react": "^7.7.0",
-        "jest": "^26.6.3"
+        "file-loader": "^3.0.0",
+        "html-webpack-plugin": "^3.2.0",
+        "jest": "^26.6.3",
+        "less": "^3.9.0",
+        "less-loader": "^5.0.0",
+        "mini-css-extract-plugin": "^0.6.0",
+        "nodemon": "^1.17.3",
+        "regenerator-runtime": "^0.13.7",
+        "source-map-loader": "^0.2.4",
+        "style-loader": "^0.23.0",
+        "svg-url-loader": "^7.1.1",
+        "ts-jest": "^26.4.4",
+        "ts-node": "^9.1.1",
+        "uglifyjs-webpack-plugin": "^2.2.0",
+        "url-loader": "^1.0.1",
+        "webpack": "^4.34.0",
+        "webpack-cli": "^3.0.8",
+        "webpack-dev-server": "^3.1.3"
     }
 }
